Changes in version: JMbayes_0.8-66

  * added function for dynamic predictions from multivariate models.
  * new methods for aucJM(), rocJM() and prederrJM() for multivariate models.
  * handling of interval censored data.
  * allow for time-varying effects in the survival submodel.
  * added a vignette in the doc/ directory for multivariate models.
  * faster C++ implementation.
  * corrected issues in predVars in model.frames.

---------------------------------------

Changes in version: JMbayes_0.8-6

  * extractFrames() now correctly constructs the design matrix for hierarchical centering.

---------------------------------------

Changes in version: JMbayes_0.8-3

  * added function mvglmer() for fitting multivariate mixed models using JAGS.
  * added function mvJointModelBayes() for fitting multivariate joint models.

---------------------------------------

Changes in version: JMbayes_0.8-1

  * shiny app for dynamic predictions from mixed models.

---------------------------------------

Changes in version: JMbayes_0.8-0

  * package version for JSS paper v72i07.

---------------------------------------

Changes in version: JMbayes_0.7-9

  * aucJM() and prederrJM() now work with left truncated data.

---------------------------------------

Changes in version: JMbayes_0.7-8

  * support the use of offset().

---------------------------------------

Changes in version: JMbayes_0.7-6

  * resolve small bugs in summary.JMbayes().

---------------------------------------

Changes in version: JMbayes_0.7-5

  * resolve imports from other packages in NAMESPACE.

---------------------------------------

Changes in version: JMbayes_0.7-2

  * jointModelBayes() can now accept Cox models with left-truncation.

---------------------------------------

Changes in version: JMbayes_0.7-0

  * New function rocJM() calculates dynamic sensitivity and specificity and the plot produce the ROC curve plot.