@@ -2,3 +2,4 @@
 ^\.Rproj\.user$
 JSSpaper
 README.md
+.travis.yml
