@@ -451,9 +451,10 @@ print.survfit.mvJMbayes <- function (x, ...) {
 
 ##########################################################################################
 
-plot.survfit.mvJMbayes <- function (x, split = c(1, 1), which_subjects = NULL,
-                                    surv_in_all = TRUE, main = NULL, include.y = TRUE,
-                                    xlab = "Time", ylab = NULL, zlab = "Event-Free Probability",
+plot.survfit.mvJMbayes <- function (x, split = c(1, 1), which_subjects = NULL, which_outcomes = NULL,
+                                    surv_in_all = TRUE, include.y = TRUE, fun = NULL, 
+                                    main = NULL, xlab = "Time", ylab = NULL, 
+                                    zlab = "Event-Free Probability",
                                     include_CI = TRUE, fill_area_CI = TRUE, 
                                     col_points = "black", pch_points = 1,
                                     col_lines = "red", col_lines_CI = "black", 
@@ -471,6 +472,11 @@ plot.survfit.mvJMbayes <- function (x, split = c(1, 1), which_subjects = NULL,
         surv <- c(1, summ[, "Mean"])
         low <- c(1, summ[, "Lower"])
         upp <- c(1, summ[, "Upper"])
+        if (!is.null(fun) && is.function(fun)) {
+            surv <- fun(surv)
+            low <- fun(low)
+            upp <- fun(upp)
+        }
         plot(times, surv, col = col_lines, type = "l", ylim = c(0.0, 1),
              lwd = 2, xlim = xlim, axes = FALSE)
         box()
@@ -500,11 +506,20 @@ plot.survfit.mvJMbayes <- function (x, split = c(1, 1), which_subjects = NULL,
             valid_subjects <- which_subjects
         }
     }
+    valid_outcomes <- seq_len(n_outcomes)
+    if (!is.null(which_outcomes)) {
+        if (!all(which_outcomes %in% valid_outcomes)) {
+            stop("'which_outcomes' must be an integer vector with possible values: ",
+                 paste(valid_outcomes, collapse = ", "))
+        } else {
+            valid_outcomes <- which_outcomes
+        }
+    }
     for (i in valid_subjects) {
         opar <- par(no.readonly = TRUE, mfcol = split, oma = c(3, 3, 2, 3), 
                     mar = c(0, 0, 0, 0), mgp = c(3, 0.4, 0), tcl = -0.25)
         if (include.y) {
-            for (j in seq_len(n_outcomes)) {
+            for (j in valid_outcomes) {
                 obs_times <- x$obs.times[[i]]
                 y <- x$y[[i]][[j]]
                 if (fact_y <- is.factor(y)) {
