@@ -1,3 +1,9 @@
+Changes in version: JMbayes_0.8-67
+
+  * the shiny app for dynamic prediction now works for multivariate models.
+
+---------------------------------------
+
 Changes in version: JMbayes_0.8-66
 
   * added function for dynamic predictions from multivariate models.
